alignment fix

--- a/src/app/views/landing/ListingDetailOne/ListingDetailOne.component.scss
+++ b/src/app/views/landing/ListingDetailOne/ListingDetailOne.component.scss
@@ -3757,7 +3757,7 @@ border-radius: 10px;
     display: flex;
     overflow-x: auto;
     gap: 30px;
-    margin-left: 20px;
+
     margin-right: 20px;
 
 
@@ -3918,7 +3918,7 @@ border-radius: 10px;
 }
 .item-background {
   background-color: #D9D9D92E; /* Customize background color */
-  padding: 15px;
+  padding: 10px;
 
   border-radius: 10px; /* Optional: Adds rounded corners */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow for better separation */
